[package]
name = "node-rust"
version = "0.1.0"
authors = ["Jonah Pelfrey <pelfreyjonah@gmail.com>"]
license = "MIT"
build = "build.rs"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "node_rust"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.3.3"

[dependencies]
neon = "0.3.3"
neon-serde = "0.2.0"
serde_derive = "1.0.80"
serde_json = "^1"
serde = "1.0.80"